ADD: implement video download functionality from a list; refactor download handling in downloadvideo.py

--- a/index.html
+++ b/index.html
@@ -348,6 +348,96 @@
 	A Video Essay About Efficiency | <a href="generated/3qt9H2rkwxo/">generated/3qt9H2rkwxo/</a> | 2025-02-27 04:36:20<br/>
 	I made 7 new custom objects and more in Super Mario Galaxy 2!! | <a href="generated/xs4kj9pUgXs/">generated/xs4kj9pUgXs/</a> | 2025-02-27 06:02:28<br/>
 	Is The World Actually Ending? | <a href="generated/cL6cbZ4eCD8/">generated/cL6cbZ4eCD8/</a> | 2025-02-28 09:41:09<br/>
+	Elon Musk Had an ISS Meltdown, and Picked Fights with Astronauts. | <a href="generated/eZb9ShrZHrQ/">generated/eZb9ShrZHrQ/</a> | 2025-02-28 10:15:34<br/>
+	The Day I Gained SELF RESPECT Was HELL For My OPPS | <a href="generated/U6hGu0fqs1E/">generated/U6hGu0fqs1E/</a> | 2025-02-28 10:24:00<br/>
+	Chat, Is Mozilla Firefox Cooked | <a href="generated/W3Yvv4EaTfs/">generated/W3Yvv4EaTfs/</a> | 2025-02-28 10:57:40<br/>
+	The Mario Kart Wii Showdown of the Decade | <a href="generated/I-K-O8LT5ZY/">generated/I-K-O8LT5ZY/</a> | 2025-02-28 11:27:16<br/>
+	Instagram Did Something Really Bad Yesterday... | <a href="generated/ove1-vIKO1c/">generated/ove1-vIKO1c/</a> | 2025-02-28 20:14:29<br/>
+	AMD Out Here Saving Gaming - RX 9070 and 9070 XT Announcement | <a href="generated/gKJJycCTeuU/">generated/gKJJycCTeuU/</a> | 2025-02-28 20:58:40<br/>
+	China VS Japan | <a href="generated/tvCSp0AzZLI/">generated/tvCSp0AzZLI/</a> | 2025-02-28 21:08:24<br/>
+	Shady Discord Users are Working for the Government now... | <a href="generated/3bQkzxJS1DQ/">generated/3bQkzxJS1DQ/</a> | 2025-03-01 01:42:55<br/>
+	Technology isn't fun anymore | <a href="generated/P-TANCVoHlc/">generated/P-TANCVoHlc/</a> | 2025-03-01 04:31:14<br/>
+	What Is Xbox Even Doing? | <a href="generated/e0bDHwF2NdU/">generated/e0bDHwF2NdU/</a> | 2025-03-01 09:15:45<br/>
+	The FINAL Showdown - Bagging VS Frontrunning | Mario Kart 8 Deluxe | <a href="generated/R7vOLoTHKyA/">generated/R7vOLoTHKyA/</a> | 2025-03-02 01:40:44<br/>
+	Recompilation: An Incredible New Way to Keep N64 Games Alive | <a href="generated/ywWwUuWRgsM/">generated/ywWwUuWRgsM/</a> | 2025-03-02 01:50:28<br/>
+	The Gen Z Dating Scene Is A Disaster And It’s Time We Talk About It… | <a href="generated/8urGlgajWOw/">generated/8urGlgajWOw/</a> | 2025-03-02 05:14:11<br/>
+	Dealing with POINTLESS Tech and FAKE Convenience | <a href="generated/Qv5LFfwbBZE/">generated/Qv5LFfwbBZE/</a> | 2025-03-02 05:38:48<br/>
+	Dealing With the New Age of Illiteracy | <a href="generated/eHwdIV4YXP4/">generated/eHwdIV4YXP4/</a> | 2025-03-02 06:23:07<br/>
+	Everything You Touch Makes You BOUNCE in Mario Kart Wii | <a href="generated/zCIfTRgVy4s/">generated/zCIfTRgVy4s/</a> | 2025-03-02 06:25:51<br/>
+	This month’s news without the BS (February 2025) | <a href="generated/yZRSvJIqE3U/">generated/yZRSvJIqE3U/</a> | 2025-03-02 08:23:33<br/>
+	Mozilla lost touch with reality; how becoming rich through failure stunts mental & emotional growth | <a href="generated/-8bTquKjzos/">generated/-8bTquKjzos/</a> | 2025-03-03 02:37:31<br/>
+	Trump’s Plan to Take Over Gaza is a Nightmare | <a href="generated/PPiZLXI1sWs/">generated/PPiZLXI1sWs/</a> | 2025-03-03 04:45:43<br/>
+	Dealing With the Lack of Progress in Society | <a href="generated/5SY8-yzaPSU/">generated/5SY8-yzaPSU/</a> | 2025-03-03 21:43:27<br/>
+	Brother turns heel & becomes anti-consumer printer company 😢 😢 😢 | <a href="generated/bpHX_9fHNqE/">generated/bpHX_9fHNqE/</a> | 2025-03-04 01:44:55<br/>
+	Game Crashes in Super Paper Mario | <a href="generated/TirqyNRKIpk/">generated/TirqyNRKIpk/</a> | 2025-03-04 02:01:12<br/>
+	Your Domain Does Not Exist | <a href="generated/Dmy3IThKO14/">generated/Dmy3IThKO14/</a> | 2025-03-04 02:45:35<br/>
+	Xbox One emulation is making INCREDIBLE progress in 2025 | <a href="generated/DXSEhCQxqEQ/">generated/DXSEhCQxqEQ/</a> | 2025-03-04 04:14:57<br/>
+	The Wacky World of Wii Modding | <a href="generated/I2dDzHJ8JRA/">generated/I2dDzHJ8JRA/</a> | 2025-03-04 04:18:25<br/>
+	How The Blue Shell WARPED Mario Kart -- Designing For Evolution | <a href="generated/2YSJiLOWJi4/">generated/2YSJiLOWJi4/</a> | 2025-03-04 17:52:21<br/>
+	This is a 4090 Killer… and I’m a Liar - RTX 5070 Review | <a href="generated/rUaztYdgoj0/">generated/rUaztYdgoj0/</a> | 2025-03-05 01:24:49<br/>
+	HUGE *NEW* CUSTOM TRACK UPDATE in Mario Kart Wii | <a href="generated/KjWN1vw6Efc/">generated/KjWN1vw6Efc/</a> | 2025-03-05 01:56:04<br/>
+	Trump and Elon Musk are DESTROYING the US by turning it into Russia | <a href="generated/cwxDmQoSK9w/">generated/cwxDmQoSK9w/</a> | 2025-03-07 03:32:04<br/>
+	State of The Dead Internet | <a href="generated/GELgKl_Wow8/">generated/GELgKl_Wow8/</a> | 2025-03-07 09:27:26<br/>
+	Windows Utility in 2025 | <a href="generated/IuaNw8Tpn7Q/">generated/IuaNw8Tpn7Q/</a> | 2025-03-09 01:47:42<br/>
+	2020 LG OLED l  The Black 4K HDR 60fps | <a href="generated/njX2bu-_Vw4/">generated/njX2bu-_Vw4/</a> | 2025-03-09 02:38:40<br/>
+	i become a flight attendant for spirit airlines and give people nothing | <a href="generated/_RblaMYQ14c/">generated/_RblaMYQ14c/</a> | 2025-03-09 04:19:53<br/>
+	I FORCED My Girlfriend To Play Sonic Games... | <a href="generated/RncBjpxOdC8/">generated/RncBjpxOdC8/</a> | 2025-03-09 11:19:01<br/>
+	New Idle Animations (by PixelPalaverer) | <a href="generated/QzfAaHyavVg/">generated/QzfAaHyavVg/</a> | 2025-03-09 12:11:06<br/>
+	PS5 Pro Sales 'Slowing Down'... Why? | <a href="generated/pvFCvZmPxsk/">generated/pvFCvZmPxsk/</a> | 2025-03-09 18:47:35<br/>
+	DF Retro EX: Sonic Unleashed PC Recompilation - A Direct Xbox 360 Port With Superb Extras | <a href="generated/vjgt7PlLtEo/">generated/vjgt7PlLtEo/</a> | 2025-03-10 04:52:41<br/>
+	【MV】M@GICAL☆CURE! LOVE ♥ SHOT! / SAWTOWNE feat. Hatsune Miku | <a href="generated/LaEgpNBt-bQ/">generated/LaEgpNBt-bQ/</a> | 2025-03-10 13:08:46<br/>
+	Windows 10 EOL Won't Make Linux Popular... But | <a href="generated/mWIGgO-Rn9k/">generated/mWIGgO-Rn9k/</a> | 2025-03-10 15:56:23<br/>
+	All Tomorrows: the future of humanity? | <a href="generated/imNtSPM3-r4/">generated/imNtSPM3-r4/</a> | 2025-03-10 16:17:23<br/>
+	The YouTubers Who Backed a Genocide | <a href="generated/SsPCxoln6fQ/">generated/SsPCxoln6fQ/</a> | 2025-03-12 03:06:42<br/>
+	When a Nintendo Game has Server Maintenance | <a href="generated/hZkrniYUBpg/">generated/hZkrniYUBpg/</a> | 2025-03-12 14:08:16<br/>
+	why you should be yourself, even if you hate it. | <a href="generated/3SERGc9axCM/">generated/3SERGc9axCM/</a> | 2025-03-13 02:28:27<br/>
+	How I'd Fix Apple Intelligence | <a href="generated/w3dVNS5VdcA/">generated/w3dVNS5VdcA/</a> | 2025-03-13 08:39:06<br/>
+	The WAR against Tesla is getting INSANE | <a href="generated/bUry1km6YFQ/">generated/bUry1km6YFQ/</a> | 2025-03-18 10:06:57<br/>	Donald Trump F***s Australia with Tariffs | <a href="generated/teo66v3VBNo/">generated/teo66v3VBNo/</a> | 2025-03-18 10:09:46<br/>
+	Mojang, you're making a huge mistake here. | <a href="generated/J7s_jBRU5bI/">generated/J7s_jBRU5bI/</a> | 2025-03-18 10:11:45<br/>
+	Windows 10 EOL Won't Make Linux Popular... But | <a href="generated/mWIGgO-Rn9k/">generated/mWIGgO-Rn9k/</a> | 2025-03-18 10:13:40<br/>
+	Sunset Heights - Forces vs Shadow Generations | <a href="generated/rodOIHndX2M/">generated/rodOIHndX2M/</a> | 2025-03-18 10:17:12<br/>
+	Happy birthday to Mai Waifu Kotonoha Katsura | <a href="generated/SwKkRzJ0GDs/">generated/SwKkRzJ0GDs/</a> | 2025-03-18 10:22:31<br/>
+	Google doesn't work anymore | <a href="generated/no_oAmo5hIQ/">generated/no_oAmo5hIQ/</a> | 2025-03-18 10:25:48<br/>
+	UK Prime Minister Keir Starmer Answers YOUR Defence Questions | <a href="generated/1ctS7m8VYPY/">generated/1ctS7m8VYPY/</a> | 2025-03-18 10:27:17<br/>
+	The Heil-lights and Lowpoints of Elon Musk in the White House | The Daily Show | <a href="generated/I9pi6si9SHE/">generated/I9pi6si9SHE/</a> | 2025-03-18 10:29:08<br/>
+	Apple needs to apologize | <a href="generated/wR28_UI5TCI/">generated/wR28_UI5TCI/</a> | 2025-03-18 10:30:31<br/>
+	Politics in Video Games | <a href="generated/l-t2fvNKZsw/">generated/l-t2fvNKZsw/</a> | 2025-03-18 10:33:04<br/>
+	【MV】M@GICAL☆CURE! LOVE ♥ SHOT! / SAWTOWNE feat. Hatsune Miku | <a href="generated/LaEgpNBt-bQ/">generated/LaEgpNBt-bQ/</a> | 2025-03-18 10:41:30<br/>
+	Yume 2kki OST - Usugurai Residence: Outskirts (Extended) | <a href="generated/k3d-vyamW2A/">generated/k3d-vyamW2A/</a> | 2025-03-18 10:42:21<br/>
+	All Tomorrows: the future of humanity? | <a href="generated/imNtSPM3-r4/">generated/imNtSPM3-r4/</a> | 2025-03-18 10:57:14<br/>
+	Backside of the TV - v1.3 Gameplay | Mario Kart Wii Custom Track by GioMacGrillin | <a href="generated/ryaFjlyooJ0/">generated/ryaFjlyooJ0/</a> | 2025-03-18 10:59:36<br/>
+	Sonic Unleashed PC Play as Humans - Human Mod Pack | <a href="generated/tq4963I0IYg/">generated/tq4963I0IYg/</a> | 2025-03-18 11:05:24<br/>
+	Our AI girlfriends just leveled up big time… | <a href="generated/UIVADiGfwWc/">generated/UIVADiGfwWc/</a> | 2025-03-18 11:05:59<br/>
+	I Feel Like My Depression Is Getting WORSE | <a href="generated/n9Or4MRxpS0/">generated/n9Or4MRxpS0/</a> | 2025-03-18 11:07:55<br/>
+	Humanity’s Final Goal | Isaac Asimov’s The Last Question | <a href="generated/BmPcWuv6Mcw/">generated/BmPcWuv6Mcw/</a> | 2025-03-18 11:11:54<br/>
+	There are no known habitable exoplanets | <a href="generated/eMtBmF7izgs/">generated/eMtBmF7izgs/</a> | 2025-03-18 11:15:14<br/>
+	This GPU scam is Almost Impossible to Detect | <a href="generated/6NpOw1Onf2I/">generated/6NpOw1Onf2I/</a> | 2025-03-18 11:18:28<br/>
+	US stocks plunge as fears grow over economic slowdown | BBC News | <a href="generated/zMczBzh5xns/">generated/zMczBzh5xns/</a> | 2025-03-18 11:20:43<br/>
+	Sunset Heights - Forces vs Shadow Generations | <a href="generated/rodOIHndX2M/">generated/rodOIHndX2M/</a> | 2025-03-18 11:25:20<br/>
+	Gen Z Men are NOT OKAY - and they are helping the RISE of FASCISM | <a href="generated/KqVTlOKK7XU/">generated/KqVTlOKK7XU/</a> | 2025-03-18 11:34:01<br/>
+	SONIC UNLEASHED | <a href="generated/2XJ6F-JNm7Y/">generated/2XJ6F-JNm7Y/</a> | 2025-03-18 11:43:30<br/>
+	Why did UK crisp packets swap colours? | <a href="generated/XLC0eeDalBI/">generated/XLC0eeDalBI/</a> | 2025-03-18 11:45:11<br/>
+	Did Anonymous Just Take Down Twitter? | <a href="generated/TCOXryTbbNY/">generated/TCOXryTbbNY/</a> | 2025-03-18 11:50:05<br/>
+	Rivian's paid battery "unlock" - yes, I would download a car, and I'd pirate the sh out of it. | <a href="generated/3zLZnYXU5kw/">generated/3zLZnYXU5kw/</a> | 2025-03-18 11:50:47<br/>
+	When an Angry Employee Turns Hacker | <a href="generated/0kAw_XJpCcE/">generated/0kAw_XJpCcE/</a> | 2025-03-18 11:57:22<br/>
+	Xbox's Whole Future Just LEAKED... | <a href="generated/YPT_Ox6F28Q/">generated/YPT_Ox6F28Q/</a> | 2025-03-18 11:59:13<br/>
+	a special wii party video | <a href="generated/9rwUbm0X_Bg/">generated/9rwUbm0X_Bg/</a> | 2025-03-18 12:00:13<br/>
+	Minecraft has a HUGE problem... | <a href="generated/QxCTvm_EMLs/">generated/QxCTvm_EMLs/</a> | 2025-03-18 12:00:48<br/>
+	uBlock Origin is Cooked... | <a href="generated/NRaDCa0RuTo/">generated/NRaDCa0RuTo/</a> | 2025-03-18 12:01:20<br/>
+	YouTube Premium Lite is a Scam... | <a href="generated/CEd7nAM6oD4/">generated/CEd7nAM6oD4/</a> | 2025-03-18 12:01:56<br/>
+	I tried coding my first app. It didn't go well... | <a href="generated/vlXdUU5pd_0/">generated/vlXdUU5pd_0/</a> | 2025-03-18 12:03:00<br/>
+	Are We About to Enter a New Golden Age of Minecraft? | <a href="generated/9WoZurvre4U/">generated/9WoZurvre4U/</a> | 2025-03-18 12:03:27<br/>
+	England Sucks Mate | <a href="generated/dJQKRKrV0to/">generated/dJQKRKrV0to/</a> | 2025-03-18 12:04:09<br/>
+	THIS is what Competitive Mario Kart 9 will Look Like | <a href="generated/1sfxe3QQoFk/">generated/1sfxe3QQoFk/</a> | 2025-03-18 12:11:20<br/>
+	I Truly Cannot Explain This | <a href="generated/iDJ_xTwBpzw/">generated/iDJ_xTwBpzw/</a> | 2025-03-18 12:12:42<br/>
+	THIS is what Competitive Mario Kart 9 will Look Like | <a href="generated/1sfxe3QQoFk/">generated/1sfxe3QQoFk/</a> | 2025-03-18 12:15:55<br/>
+	What if I had an unlimited budget…? - Sony A95K | <a href="generated/1eALWqNZh1I/">generated/1eALWqNZh1I/</a> | 2025-03-18 12:19:31<br/>
+	What if I had an unlimited budget…? - Sony A95K | <a href="generated/1eALWqNZh1I/">generated/1eALWqNZh1I/</a> | 2025-03-18 12:23:04<br/>
+	Wait. It's Real? | <a href="generated/xTgFCXrDgDk/">generated/xTgFCXrDgDk/</a> | 2025-03-18 12:23:43<br/>
+	SONIC UNLEASHED (but better) | <a href="generated/JjkWMMa32Aw/">generated/JjkWMMa32Aw/</a> | 2025-03-18 12:24:44<br/>
+	Did Discord REALLY Kill In Game Voice Chats? | <a href="generated/QowbhfZpGnU/">generated/QowbhfZpGnU/</a> | 2025-03-18 12:26:04<br/>
+	road trip | <a href="generated/cXi5M9o3b6w/">generated/cXi5M9o3b6w/</a> | 2025-03-18 12:26:16<br/>
+	Project ReDev Launch Trailer! | <a href="generated/QuryJC0U8cM/">generated/QuryJC0U8cM/</a> | 2025-03-18 12:26:41<br/>
 
     </body>
     </html>
