--- a/index.html
+++ b/index.html
@@ -438,6 +438,43 @@
 	Did Discord REALLY Kill In Game Voice Chats? | <a href="generated/QowbhfZpGnU/">generated/QowbhfZpGnU/</a> | 2025-03-18 12:26:04<br/>
 	road trip | <a href="generated/cXi5M9o3b6w/">generated/cXi5M9o3b6w/</a> | 2025-03-18 12:26:16<br/>
 	Project ReDev Launch Trailer! | <a href="generated/QuryJC0U8cM/">generated/QuryJC0U8cM/</a> | 2025-03-18 12:26:41<br/>
+	The future we were promised. | <a href="generated/a214fs9BaVQ/">generated/a214fs9BaVQ/</a> | 2025-03-18 12:28:54<br/>
+	Death Stranding 2 Looks A Lot Like Metal Gear Solid 6 | <a href="generated/EhkgcsXDjns/">generated/EhkgcsXDjns/</a> | 2025-03-18 12:29:17<br/>
+	The Horrific Future of '1984' Explained | <a href="generated/bcwemPHuDRo/">generated/bcwemPHuDRo/</a> | 2025-03-18 12:31:20<br/>
+	There's a better way to browse the internet that you (probably) don't know about | <a href="generated/XxH43HcgNuw/">generated/XxH43HcgNuw/</a> | 2025-03-18 12:32:04<br/>
+	Britain's Far Right is Falling Apart | <a href="generated/Z-6Yr7kTHRQ/">generated/Z-6Yr7kTHRQ/</a> | 2025-03-18 12:33:24<br/>
+	How the Internet Made Obama | <a href="generated/W3iSb7doG-c/">generated/W3iSb7doG-c/</a> | 2025-03-18 12:33:53<br/>
+	The YouTubers Who Backed a Genocide | <a href="generated/SsPCxoln6fQ/">generated/SsPCxoln6fQ/</a> | 2025-03-18 12:40:53<br/>
+	Gen Z's Entering A Recession & We're NOT Ready For It... | <a href="generated/IchE8n6w4i8/">generated/IchE8n6w4i8/</a> | 2025-03-18 12:43:21<br/>
+	You’re Probably Wasting Money on Gaming Mice | <a href="generated/ozcZuz5p3ss/">generated/ozcZuz5p3ss/</a> | 2025-03-18 12:44:50<br/>
+	The Story of Wii Games in China | <a href="generated/mttfAqHCuTg/">generated/mttfAqHCuTg/</a> | 2025-03-18 12:45:14<br/>
+	why you should be yourself, even if you hate it. | <a href="generated/3SERGc9axCM/">generated/3SERGc9axCM/</a> | 2025-03-18 12:46:10<br/>
+	New Super Mario Bros. and the Single Number Generator | <a href="generated/NUPpvoFdiUQ/">generated/NUPpvoFdiUQ/</a> | 2025-03-18 12:46:23<br/>
+	Distant Horizons - Multiplayer Update - Beta 2.3 | <a href="generated/MiVtf8_W6JI/">generated/MiVtf8_W6JI/</a> | 2025-03-18 12:47:10<br/>
+	SONIC UNLEASHED DLC CRASH OUT | <a href="generated/x7jwPDAL2NI/">generated/x7jwPDAL2NI/</a> | 2025-03-18 12:47:54<br/>
+	What Are The Top 10 BEST Mario Games? | <a href="generated/XJgM0Jgq3WA/">generated/XJgM0Jgq3WA/</a> | 2025-03-18 12:48:32<br/>
+	How I'd Fix Apple Intelligence | <a href="generated/w3dVNS5VdcA/">generated/w3dVNS5VdcA/</a> | 2025-03-18 12:49:34<br/>
+	The Best Ways To Play Every Sonic Game On PC (2025) | <a href="generated/oVfyKWb0l4M/">generated/oVfyKWb0l4M/</a> | 2025-03-18 12:50:54<br/>
+	Donald Trump F***s Australia with Tariffs | <a href="generated/teo66v3VBNo/">generated/teo66v3VBNo/</a> | 2025-03-18 12:52:51<br/>
+	Having "Embarrassing" Interests | <a href="generated/RJUCR1cUw_c/">generated/RJUCR1cUw_c/</a> | 2025-03-18 12:53:44<br/>
+	The Minecraft New Nintendo 3DS Experience | Bearman3600 [50,000 SUB SPECIAL] | <a href="generated/MwExs00trdw/">generated/MwExs00trdw/</a> | 2025-03-18 13:02:02<br/>
+	20 Trump Supporters Take on 1 Progressive (feat. Sam Seder) | Surrounded | <a href="generated/Js15xgK4LIE/">generated/Js15xgK4LIE/</a> | 2025-03-18 13:26:07<br/>
+	Literally Who Cares | Minecraft Apple TV Edition - Lost In Obscurity | <a href="generated/Yk4kf_yfdWE/">generated/Yk4kf_yfdWE/</a> | 2025-03-18 13:26:52<br/>
+	convenience culture is killing our creative impulses | <a href="generated/IQC5mhe0itw/">generated/IQC5mhe0itw/</a> | 2025-03-18 13:29:12<br/>
+	creating a digital garden to end my doomscrolling | <a href="generated/0tY7Z53QJo8/">generated/0tY7Z53QJo8/</a> | 2025-03-18 13:30:35<br/>
+	Woody's Attempted Suicide | <a href="generated/aDnmYPFU7DU/">generated/aDnmYPFU7DU/</a> | 2025-03-18 13:31:47<br/>
+	I took a CIA test | <a href="generated/v30S4CWUqcc/">generated/v30S4CWUqcc/</a> | 2025-03-18 13:32:40<br/>
+	I Designed Your Goofiest UI Ideas | <a href="generated/0N87f5wfxr0/">generated/0N87f5wfxr0/</a> | 2025-03-21 10:43:44<br/>
+	We Attempted a Mario Kart Wii 2v2v2v2v2v2... | <a href="generated/HSuqOpoB2Y0/">generated/HSuqOpoB2Y0/</a> | 2025-03-21 10:48:50<br/>
+	Your iPhone is Going to Look Different! | <a href="generated/0D4cdZCSsfA/">generated/0D4cdZCSsfA/</a> | 2025-03-21 10:49:16<br/>
+	sonic unleashed dlc level | <a href="generated/5GCw2yKW1bc/">generated/5GCw2yKW1bc/</a> | 2025-03-21 10:49:24<br/>
+	IT'S A WET UPDATE, RIGHT? (Minecraft Live 2025) | <a href="generated/_NN8iipjEK0/">generated/_NN8iipjEK0/</a> | 2025-03-21 10:50:14<br/>
+	Why Labour are (Quietly) Cosying Up to the EU | <a href="generated/N8_acMCUXX0/">generated/N8_acMCUXX0/</a> | 2025-03-21 10:50:53<br/>
+	My Money Saving Adventure | <a href="generated/zm0PguJ4sDg/">generated/zm0PguJ4sDg/</a> | 2025-03-23 02:39:26<br/>
+	Microsoft Wants YOU to CUCK Them, Windows is a Free Use HOTWIFE | <a href="generated/05nRfwdB2uE/">generated/05nRfwdB2uE/</a> | 2025-03-23 02:39:48<br/>
+	You're way more interesting than you think you are | <a href="generated/kZN9vysQnhc/">generated/kZN9vysQnhc/</a> | 2025-03-23 02:46:20<br/>
+	Learning Japanese Isn't Actually That Hard | <a href="generated/7fvCb5_Nzq4/">generated/7fvCb5_Nzq4/</a> | 2025-03-23 04:29:45<br/>
+	notes on coming back to YOUR self. | <a href="generated/nB245U3M2QA/">generated/nB245U3M2QA/</a> | 2025-03-23 05:09:35<br/>
 
     </body>
     </html>
