FIX: add discord bot

--- a/index.html
+++ b/index.html
@@ -479,6 +479,30 @@
 	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 04:46:20<br/>
 	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 04:48:06<br/>
 	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 04:48:59<br/>
+	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 05:01:38<br/>
+	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 05:02:46<br/>
+	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:06:42<br/>
+	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:09:00<br/>
+	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:10:30<br/>
+	Test Video | <a href="generated/test/">generated/test/</a> | 2025-07-08 05:14:26<br/>
+	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:16:00<br/>
+	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:17:46<br/>
+	Why Zohran is Breaking Donald Trump’s Brain | <a href="generated/2fj8gQB6ltg/">generated/2fj8gQB6ltg/</a> | 2025-07-08 05:19:45<br/>
+	Why Zohran is Breaking Donald Trump’s Brain | <a href="generated/2fj8gQB6ltg/">generated/2fj8gQB6ltg/</a> | 2025-07-08 05:21:06<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:25:48<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:26:37<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:35:13<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:39:21<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:40:07<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:40:48<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:42:18<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:43:25<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:45:18<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:46:13<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:46:46<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:48:45<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:49:35<br/>
+	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:52:10<br/>
 
     </body>
     </html>
