--- a/index.html
+++ b/index.html
@@ -475,34 +475,102 @@
 	You're way more interesting than you think you are | <a href="generated/kZN9vysQnhc/">generated/kZN9vysQnhc/</a> | 2025-03-23 02:46:20<br/>
 	Learning Japanese Isn't Actually That Hard | <a href="generated/7fvCb5_Nzq4/">generated/7fvCb5_Nzq4/</a> | 2025-03-23 04:29:45<br/>
 	notes on coming back to YOUR self. | <a href="generated/nB245U3M2QA/">generated/nB245U3M2QA/</a> | 2025-03-23 05:09:35<br/>
-	The Great Corporate Extinction: Atrioc Reacts | <a href="generated/hylfbskogLU/">generated/hylfbskogLU/</a> | 2025-07-08 04:41:49<br/>
-	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 04:46:20<br/>
-	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 04:48:06<br/>
-	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 04:48:59<br/>
-	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 05:01:38<br/>
-	Trump to sign order delaying tariff deadline to Aug 1: W.House | AFP | <a href="generated/5A75qOdOcWc/">generated/5A75qOdOcWc/</a> | 2025-07-08 05:02:46<br/>
-	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:06:42<br/>
-	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:09:00<br/>
-	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:10:30<br/>
-	Test Video | <a href="generated/test/">generated/test/</a> | 2025-07-08 05:14:26<br/>
-	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:16:00<br/>
-	The Button Breaking Mario Kart Wii | <a href="generated/0avZg8XrH7I/">generated/0avZg8XrH7I/</a> | 2025-07-08 05:17:46<br/>
-	Why Zohran is Breaking Donald Trump’s Brain | <a href="generated/2fj8gQB6ltg/">generated/2fj8gQB6ltg/</a> | 2025-07-08 05:19:45<br/>
-	Why Zohran is Breaking Donald Trump’s Brain | <a href="generated/2fj8gQB6ltg/">generated/2fj8gQB6ltg/</a> | 2025-07-08 05:21:06<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:25:48<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:26:37<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:35:13<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:39:21<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:40:07<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:40:48<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:42:18<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:43:25<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:45:18<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:46:13<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:46:46<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:48:45<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:49:35<br/>
-	SNES Battle Course (Super Mario Kart) - Mario Kart World (OST) | <a href="generated/al8EhsZNlmA/">generated/al8EhsZNlmA/</a> | 2025-07-08 05:52:10<br/>
+	how to make cool sh*t and love doing it | <a href="generated/en-ClrgaV8U/">generated/en-ClrgaV8U/</a> | 2025-03-23 15:17:38<br/>
+	Playing Mario Kart Wii 2v2v2v2v2v2.. UNTIL I LOSE | <a href="generated/n2q7w5znZz8/">generated/n2q7w5znZz8/</a> | 2025-03-23 15:31:44<br/>
+	Top 10 Minecraft Mods (1.21.4) - 2025 | <a href="generated/cjD9jYsfNj8/">generated/cjD9jYsfNj8/</a> | 2025-03-23 15:32:18<br/>
+	Are We Doomed??? | The Future, Today! [3] | <a href="generated/87iBcYjRKUE/">generated/87iBcYjRKUE/</a> | 2025-03-23 15:35:48<br/>
+	Why improving yourself is ruining you | <a href="generated/sa59MHiLzSw/">generated/sa59MHiLzSw/</a> | 2025-03-23 15:37:18<br/>
+	gen z's obsession with performance and self expression | <a href="generated/nnI08K4P9XQ/">generated/nnI08K4P9XQ/</a> | 2025-03-23 15:37:56<br/>
+	How many steaks do you need to max rank in Sonic Unleashed? | <a href="generated/1NCEgFxTaPs/">generated/1NCEgFxTaPs/</a> | 2025-03-23 15:38:38<br/>
+	GTA 6 : Don't Be Garbage | <a href="generated/JKUBCUF9pgY/">generated/JKUBCUF9pgY/</a> | 2025-03-28 03:24:30<br/>
+	The Japanese Philosophy That Changed My Life | <a href="generated/JnAl1PfAIvg/">generated/JnAl1PfAIvg/</a> | 2025-03-28 03:47:33<br/>
+	You just need to lock out. | <a href="generated/tJs-KRdAceI/">generated/tJs-KRdAceI/</a> | 2025-03-28 04:13:27<br/>
+	bro, GO TO SLEEP | <a href="generated/2FO6of9Paqw/">generated/2FO6of9Paqw/</a> | 2025-03-28 04:49:51<br/>
+	Mental Health TikTok is concerning… | <a href="generated/QrVKtiAMVvc/">generated/QrVKtiAMVvc/</a> | 2025-03-28 05:24:16<br/>
+	Simplicity Died in 2012 | <a href="generated/I5XsWO7utYU/">generated/I5XsWO7utYU/</a> | 2025-03-28 06:17:23<br/>
+	the growing empathy shortage | <a href="generated/SHKk5CxAXhg/">generated/SHKk5CxAXhg/</a> | 2025-03-28 13:36:25<br/>
+	I Teamed Up with a #1 PLAYER in Mario Kart 8 Deluxe | <a href="generated/YV1Kr2BoTWg/">generated/YV1Kr2BoTWg/</a> | 2025-03-30 17:39:11<br/>
+	how to lock in hard | <a href="generated/UuBl2nVR100/">generated/UuBl2nVR100/</a> | 2025-03-30 19:09:03<br/>
+	How Austerity Broke Britain | <a href="generated/cOWSpdqVaKA/">generated/cOWSpdqVaKA/</a> | 2025-03-30 22:55:23<br/>
+	Microsoft mandates Online Accounts - for your safety | <a href="generated/ZsElunDcpMI/">generated/ZsElunDcpMI/</a> | 2025-03-30 22:58:43<br/>
+	I'm TIRED of AI | <a href="generated/NvBz8A1OTAQ/">generated/NvBz8A1OTAQ/</a> | 2025-03-31 01:23:25<br/>
+	Elon's Plan For Europe | <a href="generated/HJve5dvI5CQ/">generated/HJve5dvI5CQ/</a> | 2025-04-01 01:33:26<br/>
+	Mr Beast has somehow got WORSE (The Next Elon Musk?) | <a href="generated/YL87sPZKqgc/">generated/YL87sPZKqgc/</a> | 2025-04-01 04:52:11<br/>
+	I hate my phone so I got rid of it | <a href="generated/nnsyGSTKlw0/">generated/nnsyGSTKlw0/</a> | 2025-04-01 05:00:26<br/>
+	Prepare For the ‘Black Screen of Death’ | <a href="generated/buE6m9M-2GU/">generated/buE6m9M-2GU/</a> | 2025-04-01 07:01:12<br/>
+	SONIC UNLEASHED (but better) | <a href="generated/JjkWMMa32Aw/">generated/JjkWMMa32Aw/</a> | 2025-04-01 07:02:48<br/>
+	sonic unleashed has a bad drift... | <a href="generated/1_eRzWgm6Hw/">generated/1_eRzWgm6Hw/</a> | 2025-04-01 11:08:05<br/>
+	My BIGGEST UNBOXING ever! | <a href="generated/nqla6PSs4f4/">generated/nqla6PSs4f4/</a> | 2025-04-01 15:18:33<br/>
+	Nintendo Channel Update - Improved load times! | <a href="generated/XAC1f41HL24/">generated/XAC1f41HL24/</a> | 2025-04-01 15:18:45<br/>
+	WiiLink WFC on Delta - Showcase (not April Fools) | <a href="generated/-7sSUwjCklQ/">generated/-7sSUwjCklQ/</a> | 2025-04-01 15:18:55<br/>
+	Mario Kart 9 Alone Won't Save the Community | <a href="generated/sd9ZCDxZTng/">generated/sd9ZCDxZTng/</a> | 2025-04-01 16:47:19<br/>
+	Is Gen Z Really Becoming More Conservative? | <a href="generated/wgWW_cZHFO8/">generated/wgWW_cZHFO8/</a> | 2025-04-02 21:30:09<br/>
+	EVERYTHING We Know About MARIO KART WORLD & Nintendo Direct Switch 2 Trailer Reaction! | <a href="generated/BioO7ad4AJ8/">generated/BioO7ad4AJ8/</a> | 2025-04-06 02:33:42<br/>
+	Twitter Is Defending $80 Games... (and why that's dumb) | <a href="generated/e2_NVclaDp8/">generated/e2_NVclaDp8/</a> | 2025-04-06 02:34:12<br/>
+	The Day Top Gear Died | <a href="generated/r8AEh7_bu58/">generated/r8AEh7_bu58/</a> | 2025-04-06 02:40:51<br/>
+	Switch 2 Unveiled - Games, Hardware, Specs + More -  A DF Direct Special | <a href="generated/BC8XX9pwP40/">generated/BC8XX9pwP40/</a> | 2025-04-06 02:49:57<br/>
+	Jubilee Is Just Political Mr. Beast | <a href="generated/7yjp3xu9cK4/">generated/7yjp3xu9cK4/</a> | 2025-04-06 02:50:59<br/>
+	How I decentralized my smartphone with a flip phone and other cool items!°☆ | <a href="generated/QWBg4hXrnaQ/">generated/QWBg4hXrnaQ/</a> | 2025-04-06 02:53:13<br/>
+	"Mario Kart World Looks BAD" | <a href="generated/XLIP1BNAYaY/">generated/XLIP1BNAYaY/</a> | 2025-04-06 03:00:26<br/>
+	Let's look at some AMAZING personal websites! | <a href="generated/Yko-LMBrRQw/">generated/Yko-LMBrRQw/</a> | 2025-04-06 05:21:01<br/>
+	DO NOT BUY THE NINTENDO SWITCH 2 | Bearman3600 | <a href="generated/iIYvvSLblHg/">generated/iIYvvSLblHg/</a> | 2025-04-06 05:24:28<br/>
+	Leftist vs Liberal vs Conservative vs MAGA | Middle Ground Debate | <a href="generated/eTcsiw9tE_c/">generated/eTcsiw9tE_c/</a> | 2025-04-07 17:03:38<br/>
+	I just lost $500,000. | <a href="generated/SwrSHyBdmaE/">generated/SwrSHyBdmaE/</a> | 2025-04-07 17:04:18<br/>
+	The Ultimate Sonic the Werehog Model Showdown | <a href="generated/z2kwjkY8nH0/">generated/z2kwjkY8nH0/</a> | 2025-04-07 17:04:32<br/>
+	We Can't Leave Here (The internet is worse now) | <a href="generated/a78cQSP3fjE/">generated/a78cQSP3fjE/</a> | 2025-04-07 17:15:34<br/>
+	Fear of Depth | Why You Should Watch More Movies | <a href="generated/_SeklR3Ys8U/">generated/_SeklR3Ys8U/</a> | 2025-04-07 17:25:10<br/>
+	Lain's Playlist for Walking to School | <a href="generated/coRWtkRpNhw/">generated/coRWtkRpNhw/</a> | 2025-04-07 17:43:01<br/>
+	The Haunting Story of PSX Lain | <a href="generated/IENpuYQLGIk/">generated/IENpuYQLGIk/</a> | 2025-04-08 03:56:43<br/>
+	The Secret to Becoming a God in Serial Experiments Lain | <a href="generated/Zc6MsSmJJzU/">generated/Zc6MsSmJJzU/</a> | 2025-04-08 05:50:48<br/>
+	Ranking ALL 96 Tracks in Mario Kart 8 Deluxe! [Tier List] | <a href="generated/iLQlmfJAll4/">generated/iLQlmfJAll4/</a> | 2025-04-15 09:55:08<br/>
+	Two neurodivergent sonic fans write for Ian Flynn | <a href="generated/NXswXO9E-CI/">generated/NXswXO9E-CI/</a> | 2025-04-15 09:55:30<br/>
+	Vinny - Minecraft Movie Review | <a href="generated/jKxt-Hc5jUk/">generated/jKxt-Hc5jUk/</a> | 2025-04-15 09:55:58<br/>
+	The Secret to Happiness as Gen Z | <a href="generated/Ry1XuptLgHU/">generated/Ry1XuptLgHU/</a> | 2025-04-15 10:04:57<br/>
+	BEST TEAMMATE EVER | Competitive Mario Kart 8 Deluxe | <a href="generated/xEMtABWRoVQ/">generated/xEMtABWRoVQ/</a> | 2025-04-15 10:10:02<br/>
+	We need dumb TVs again | <a href="generated/TLtTGd_4aKo/">generated/TLtTGd_4aKo/</a> | 2025-04-15 10:10:29<br/>
+	AI Wants to Exploit Your LONELINESS - A Video Essay on Character AI | <a href="generated/Ell3eiYES3c/">generated/Ell3eiYES3c/</a> | 2025-04-15 10:11:25<br/>
+	AI is Killing the Internet | <a href="generated/5Th-DKQh88o/">generated/5Th-DKQh88o/</a> | 2025-04-27 22:52:18<br/>
+	Create for You. | <a href="generated/QF41LApeGL4/">generated/QF41LApeGL4/</a> | 2025-04-27 22:53:20<br/>
+	Does console gaming have a future? | <a href="generated/7r7O7aYJKWg/">generated/7r7O7aYJKWg/</a> | 2025-04-27 22:54:19<br/>
+	The Internet Used to Be a Place | <a href="generated/oYlcUbLAFmw/">generated/oYlcUbLAFmw/</a> | 2025-04-27 22:55:38<br/>
+	The Collapse of Human Thinking - ft Cluely | <a href="generated/FE8qnjiyhf0/">generated/FE8qnjiyhf0/</a> | 2025-04-27 22:56:24<br/>
+	"Doomers are Ruining Gaming" | <a href="generated/JJ2zyWo0RoA/">generated/JJ2zyWo0RoA/</a> | 2025-04-27 22:57:55<br/>
+	Are modern graphics even worth it? | <a href="generated/jadT9D6iGoE/">generated/jadT9D6iGoE/</a> | 2025-04-27 23:02:47<br/>
+	Your Opinions... Are No Longer Yours | <a href="generated/Ir4jUM0kpn4/">generated/Ir4jUM0kpn4/</a> | 2025-04-29 14:17:55<br/>
+	Gen Z Lives Like They’re Rich—But Owns Nothing | <a href="generated/ofl-t7m8yLc/">generated/ofl-t7m8yLc/</a> | 2025-04-29 14:18:21<br/>
+	I'm SCARED Because Everything is DATA | <a href="generated/01CviGejY6w/">generated/01CviGejY6w/</a> | 2025-04-29 14:18:45<br/>
+	Spend $80 on THIS (and not on Mario Kart) | <a href="generated/0pYGWaoMWBI/">generated/0pYGWaoMWBI/</a> | 2025-05-07 21:47:51<br/>
+	Elon Musk IS Racist | <a href="generated/GWa0S_JkIAc/">generated/GWa0S_JkIAc/</a> | 2025-05-13 02:43:18<br/>
+	That Time Pixar Created an Industry Plant | <a href="generated/4Rpnl5vwA1k/">generated/4Rpnl5vwA1k/</a> | 2025-05-13 02:44:43<br/>
+	Internet Fatigue: why this place sucks now | <a href="generated/ctM2TIXDFQs/">generated/ctM2TIXDFQs/</a> | 2025-05-15 06:20:05<br/>
+	Is She Right? | <a href="generated/ojDGYpNGfzA/">generated/ojDGYpNGfzA/</a> | 2025-05-15 06:20:45<br/>
+	The Day Gen Z Got Cursed... | <a href="generated/pNxNoaxOA-U/">generated/pNxNoaxOA-U/</a> | 2025-05-16 08:58:51<br/>
+	I Don't Deserve This... | Competitive Mario Kart 8 Deluxe | <a href="generated/BjNrmkard4A/">generated/BjNrmkard4A/</a> | 2025-05-16 09:15:06<br/>
+	Android Just Got a Fresh Coat of Paint | <a href="generated/FYGeKaBUfYw/">generated/FYGeKaBUfYw/</a> | 2025-05-17 01:04:29<br/>
+	"You Will Own Nothing" | <a href="generated/hIhWnurBzB4/">generated/hIhWnurBzB4/</a> | 2025-05-19 04:51:13<br/>
+	Why you can't escape this gradient | <a href="generated/LRWaZWr_NYE/">generated/LRWaZWr_NYE/</a> | 2025-05-19 04:52:58<br/>
+	YouTube is CHANGING their web-player UI... let's analyze it | <a href="generated/UC_Loo2Rmoo/">generated/UC_Loo2Rmoo/</a> | 2025-05-19 04:53:11<br/>
+	The Desire to Be Sad | <a href="generated/3zdudOjHMk8/">generated/3zdudOjHMk8/</a> | 2025-05-19 04:56:17<br/>
+	Persona 5 Randomizer Chaos (AKA Joker Dies a Lot) | Tech Rules Stream Highlights | <a href="generated/4llJik5wRKg/">generated/4llJik5wRKg/</a> | 2025-05-30 10:58:18<br/>
+	Gen Z has Mastered Consumption under Capitalism | <a href="generated/7gkFujJqWo4/">generated/7gkFujJqWo4/</a> | 2025-05-30 10:59:45<br/>
+	Conservative Podcast Bros have TURNED AGAINST Israel (and people aren't happy) | <a href="generated/2kZfSUiV5D4/">generated/2kZfSUiV5D4/</a> | 2025-05-30 11:00:34<br/>
+	Why Convenience is Killing Us | <a href="generated/Tpe8te3PdkA/">generated/Tpe8te3PdkA/</a> | 2025-05-30 11:04:50<br/>
+	The Nintendo Switch in China is Quite Different (Tencent Nintendo Switch) | <a href="generated/7k2fFhI2xtI/">generated/7k2fFhI2xtI/</a> | 2025-05-30 19:29:07<br/>
+	My FIRST EVER E RANK in Sonic Unleashed... | <a href="generated/dTGY60xxduc/">generated/dTGY60xxduc/</a> | 2025-05-30 21:09:20<br/>
+	I am Going Through Some Things, so I Hate The Last of Us Now | <a href="generated/4FJyX0otXzY/">generated/4FJyX0otXzY/</a> | 2025-06-01 01:36:17<br/>
+	I am BEGGING you to Stop Caring | <a href="generated/rnFQd-8ULgM/">generated/rnFQd-8ULgM/</a> | 2025-06-01 01:44:45<br/>
+	The #1 reason you get screwed | <a href="generated/z7PypubG3e0/">generated/z7PypubG3e0/</a> | 2025-06-01 02:11:56<br/>
+	Japan's Exclusive Mario Kart 8 Software | <a href="generated/TbtGY-0nA8U/">generated/TbtGY-0nA8U/</a> | 2025-06-01 02:37:02<br/>
+	What Sonic Unleashed Could Have Looked Like | <a href="generated/jsNsCBCfSFg/">generated/jsNsCBCfSFg/</a> | 2025-06-01 02:52:33<br/>
+	Windows Is Cooked For Gaming - WAN Show May 30, 2025 | <a href="generated/sJk-etmp624/">generated/sJk-etmp624/</a> | 2025-06-01 17:14:12<br/>
+	Yo Mama - Birthing Degeneracy | <a href="generated/MnXvQTYxF_s/">generated/MnXvQTYxF_s/</a> | 2025-06-01 20:42:50<br/>
+	Valve Did It: Massive SteamOS Expansion Is Official | <a href="generated/5gaQbiw9HLs/">generated/5gaQbiw9HLs/</a> | 2025-06-01 21:45:11<br/>
+	Trump's "Fine People Hoax" Hoax | <a href="generated/t6aJ7ul1oBQ/">generated/t6aJ7ul1oBQ/</a> | 2025-06-05 16:21:42<br/>
+	I installed Linux (so should you) | <a href="generated/pVI_smLgTY0/">generated/pVI_smLgTY0/</a> | 2025-06-27 01:07:22<br/>
+	I'm DONE with Google | <a href="generated/u_Lxkt50xOg/">generated/u_Lxkt50xOg/</a> | 2025-06-27 01:16:14<br/>
+	Will AI Slop Kill the Internet? | SlopWorld | <a href="generated/NuIMZBseAOM/">generated/NuIMZBseAOM/</a> | 2025-06-27 02:53:20<br/>
+	Can I beat Sonic Unleashed on the Worst Laptop... AGAIN?! | <a href="generated/4YxoE_JNx2w/">generated/4YxoE_JNx2w/</a> | 2025-07-06 19:20:45<br/>
+	I made the PC I couldn't buy | <a href="generated/7HgAN5cEmkk/">generated/7HgAN5cEmkk/</a> | 2025-07-06 22:37:19<br/>
 
     </body>
     </html>
