--- a/index.html
+++ b/index.html
@@ -571,6 +571,9 @@
 	Will AI Slop Kill the Internet? | SlopWorld | <a href="generated/NuIMZBseAOM/">generated/NuIMZBseAOM/</a> | 2025-06-27 02:53:20<br/>
 	Can I beat Sonic Unleashed on the Worst Laptop... AGAIN?! | <a href="generated/4YxoE_JNx2w/">generated/4YxoE_JNx2w/</a> | 2025-07-06 19:20:45<br/>
 	I made the PC I couldn't buy | <a href="generated/7HgAN5cEmkk/">generated/7HgAN5cEmkk/</a> | 2025-07-06 22:37:19<br/>
+	MY FVARKING HERO | <a href="generated/5CU2-2hfX_8/">generated/5CU2-2hfX_8/</a> | 2025-07-08 20:00:41<br/>
+	How Persona 3 Changed the Series Forever... | <a href="generated/J0wniLnpzmw/">generated/J0wniLnpzmw/</a> | 2025-07-09 03:51:28<br/>
+	Apple PR Speak vs Tech YouTube! | Linus, MKBHD, Scott the Woz & Snazzy Labs | <a href="generated/mpOsYletG0Q/">generated/mpOsYletG0Q/</a> | 2025-07-12 23:16:55<br/>
 
     </body>
     </html>
